# vscode-claude-helper

./: .eslintrc.json  .gitignore  .gitmodules  .vscodeignore  CLAUDE.md  DEV.md  DEVELOPMENT.md  PUBLISHING.md  README.md  SOUND_LIMITATIONS.md  install.bat  install.sh  package-lock.json  package.json  pyproject.toml  reinstall.bat  test-cli.js  test-http.sh  tsconfig.json
.claude/: coding_style.md  settings.json  settings.local.json
.claude/agents/: code-quality-fixer.md  reviewer.md
.claude/commands/: code-quality-fixer.md  continue-feature.md  create-pr.md  create-worktree.md  merge.md  new-feature-short.md  new-feature.md  plan-feature.md  pr-comments.md  review.md  sync.md
.claude/hooks/: cleanup_untracked_worktrees.sh
claude_helper/: cli.py
docker/: Dockerfile  docker-compose.yml  restart_latest_docker.sh  spin-dev-container.sh
docs/: debugging.md  development.md  first_time_setup.md  publishing extensions vscode.md  publishing.md  registration.md
gitlens_cli_bridge/: __init__.py  cli.py
scripts/: publish.sh
src/: extension.ts  gitChangesTreeProvider.ts  gitContentProvider.ts  gitDiffProvider.ts  gitFileDecorationProvider.ts  gitOperations.ts  gitWatcher.ts  portListener.ts  treeBuilder.ts  treeItems.ts
src/commands/: compareReferences.ts  ping.ts  registry.ts  setTerminalTitle.ts
src/test/: runTest.ts
src/test/suite/: extension.test.ts  gitChangesTreeProvider.test.ts  gitWatcher.test.ts  index.ts
src/utils/: logger.ts  results.ts  terminal.ts
