[project]
name = "claude-helper"
version = "1.1.0"
description = "CLI tools for Claude Code - compare git refs, set terminal titles, send notifications to VS Code"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Yoni Chechik" }
]
keywords = ["claude", "cli", "git", "compare", "terminal", "vscode", "helper"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/YoniChechik/vscode-claude-helper"
Repository = "https://github.com/YoniChechik/vscode-claude-helper"
Issues = "https://github.com/YoniChechik/vscode-claude-helper/issues"

[project.scripts]
claude-helper = "claude_helper.cli:cli_main"
ch = "claude_helper.cli:cli_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["claude_helper"]

[tool.uv.workspace]
members = [
    ".claude",
]
